Optimisation parsing XML